--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
-host=192.168.0.16:8111
-superUserToken=1915139486310933167
+host=192.168.0.17:8111
+superUserToken=1670761120343366534
+browser=chrome
+remote=http://localhost:4444/wd/hub
+browserSize=1920x1080
